examples/bad/DupliatedPatternNames.ml
(* Do not accept duplicated function parameters (works also in deeply nested patterns) *)
let fn h h h = h in fn